# AI-Widget-SaaS-Platform

./: .env.example  .gitignore  ACIP-Blueprint.docx  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/dashboard/: package-lock.json  package.json
apps/web/: .gitignore  middleware.ts  next.config.mjs  package-lock.json  package.json
db/migrations/: 0001_init_control_plane.sql  0002_sync_state.sql  0003_leads.sql  0004_billing_audit_governance.sql  0005_identity_auth.sql  0006_tenant_settings_team.sql  0007_email_verification_contact.sql  0008_kb_feature_flags.sql  0009_billing_lifecycle.sql  0010_lead_status.sql  0011_admin_users.sql  0012_tenant_admin_notes.sql  0013_contact_inbox.sql  README.md
docs/: PRODUCT-STRATEGY.md  PRODUCT.md  phase-0-kpi-targets.md  vitrin-completion-roadmap.md
docs/runbooks/: backup-restore.md
eval/: decision-log.md  embedding_eval.py  es_provider.py  load_test.py  metrics.py  run_eval.py
eval/golden_set/: README.md  golden_set.example.jsonl  (+1 more)
infra/: Dockerfile.python  alerts.yml  backup.sh  docker-compose.yml  prometheus.yml
integrations/: README.md
plugins/: README.md
reports/: blueprint-compliance-audit.md  deferred-validation.md  dependency-upgrade.md  final-audit.md  gap-closure-audit.md  phase-0-self-audit.md  phase-1-completion-report.md  phase-1-gap-analysis.md  phase-2-completion-report.md  phase-2-gap-analysis.md  phase-3-completion-report.md  phase-3-gap-analysis.md  phase-4-completion-report.md  phase-a-completion-report.md  phase-b-completion-report.md  phase-c-completion-report.md  phase-d-completion-report.md  phase-e-completion-report.md  phase-f-completion-report.md  phase-g-partial-completion-report.md  phase-g-preflight-report.md  recovery-plan-80plus.md  repository-audit.md
scripts/: apply_migrations.py
tests/: test_agent_actions.py  test_analytics.py  test_api_health.py  test_assistant.py  test_auth.py  test_billing.py  test_cache.py  test_embedding_and_mapping.py  test_gateway.py  test_injection.py  test_isolation.py  test_metrics.py  test_middleware_security.py  test_normalize.py  test_notify.py  test_obs.py  test_query_builder.py  test_security.py  test_sync_ingest.py
(+213 files in other folders)
