[project]
name = "acip"
version = "0.0.0"
description = "ACIP — AI Commerce Intelligence Platform (Phase 0 foundation)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
    "elasticsearch>=9.0.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "celery>=5.4",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["packages", "services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["packages", "services", "."]
asyncio_mode = "auto"
testpaths = ["tests"]
