[project]
name = "acip"
version = "0.0.0"
description = "ACIP — AI Commerce Intelligence Platform (Phase 0 foundation)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "structlog>=26.1",
    "httpx>=0.28",
    "elasticsearch[async]>=9.4",
    "asyncpg>=0.31",
    "redis>=8.0",
    "celery>=5.6",
    "opentelemetry-api>=1.42",
    "opentelemetry-sdk>=1.42",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "mypy>=2.1",
]

[tool.setuptools.packages.find]
where = ["packages", "services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["packages", "services", "."]
asyncio_mode = "auto"
testpaths = ["tests"]
